samples/_failures_safe/1761218697_1440af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c90a9536.c: In function ‘event_to_string’:
./samples/SAFE/__tmp_c90a9536.c:151:32: error: missing terminating " character
  151 |         "START", "DATA_READY", "PRO
      |                                ^~~~
./samples/SAFE/__tmp_c90a9536.c:151:9: error: expected expression at end of input
  151 |         "START", "DATA_READY", "PRO
      |         ^~~~~~~
./samples/SAFE/__tmp_c90a9536.c:151:9: error: expected declaration or statement at end of input
